apps/stereov-io/infrastructure/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stereov-io-singularity
  namespace: stereov-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stereov-io-singularity
  template:
    metadata:
      labels:
        app: stereov-io-singularity
    spec:
      containers:
        - name: stereov-io-singularity
          image: ghcr.io/antistereov/stereov-io-singularity:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ghcr-secret

---

apiVersion: v1
kind: Service
metadata:
  name: stereov-io-singularity-service
  namespace: stereov-io
spec:
  selector:
    app: stereov-io-singularity
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stereov-io-singularity-ingress
  namespace: stereov-io
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.stereov.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stereov-io-singularity-service
                port:
                  number: 8000
  tls:
    - hosts:
        - stereov.io
      secretName: stereov-io-singularity-cert
